<resources>
    <string name="app_name">TextMagic</string>

    <!-- Video Display -->
    <string name="video_display_play_button">Play</string>
    <string name="video_display_pause_button">Pause</string>
    <string name="video_display_add_text_button">Add Text</string>
    <string name="video_display_remove_text_button">Remove Text</string>

    <!-- Video Edit -->
    <string name="video_edit_save_button">Save</string>

    <!-- Add Text Dialog -->
    <string name="video_display_add_text_dialog_text_hint">Text</string>
    <string name="video_display_add_text_dialog_ok_button">OK</string>
    <string name="video_display_add_text_dialog_cancel_button">Cancel</string>

    <!-- Remove Text Dialog -->
    <string name="video_display_remove_text_dialog_empty_description">There is no text available.</string>
    <string name="video_display_remove_text_remove_button">Remove</string>
</resources>