<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.display.VideoDisplayFragment">

    <zahit.textmagic.ui.video.ProgressVideoView
        android:id="@+id/videoDisplayProgressVideoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoDisplayToggleStateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_display_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoDisplayProgressVideoView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoDisplayAddTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_display_add_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoDisplayToggleStateButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoDisplayRemoveTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_display_remove_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoDisplayAddTextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>